--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "aftr"
 version = "0.1.0"
 description = "An open-source implementation of BYOND's Dream Maker programming language."
+repository = "https://github.com/Kinrany/aftr"
+license = "MIT OR Apache-2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
